# macaroon

./: .coveralls.yml  .gitignore  .travis.yml  Cargo.toml  ChangeLog.md  LICENSE  README.md
.github/workflows/: main.yml
src/: caveat.rs  crypto.rs  error.rs  lib.rs  macaroon.rs  serialization.rs  verifier.rs
src/crypto/: key.rs  mod.rs
src/serialization/: macaroon_builder.rs  mod.rs  v1.rs  v2.rs  v2j.rs  v2json.rs
tests/: compat_libmacaroons.rs  compat_macarooncompat.rs  compat_pymacaroons.rs
