[package]
name = "macaroon"
version = "0.2.0"
authors = ["Jack Lund <jackl@geekheads.net>", "macaroon-rs Contributors"]
description = "Fully functional implementation of macaroons in Rust"
documentation = "https://docs.rs/macaroon"
homepage = "https://github.com/macaroon-rs/macaroon-rs"
repository = "https://github.com/macaroon-rs/macaroon-rs"
keywords = ["macaroon", "cookies", "authorization", "credentials"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
log = "0.4"
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
base64 = "0.13"

[dev-dependencies]
env_logger = "0.9"
time = "0.3.6"
