[package]
name = "macaroon"
version = "0.3.1-dev.0"
edition = "2021"
rust-version = "1.56"
authors = ["Jack Lund <jackl@geekheads.net>", "macaroon-rs Contributors"]
description = "Fully functional implementation of macaroons in Rust"
documentation = "https://docs.rs/macaroon"
repository = "https://github.com/macaroon-rs/macaroon"
keywords = ["macaroon", "cookies", "authorization", "credentials"]
categories = ["authentication", "cryptography"]
license = "MIT"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
base64 = "0.13"

[dev-dependencies]
env_logger = "0.9"
time = { version = "0.3", features = ["parsing"] }
