[package]
name = "macaroon-asml-fork"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
authors = ["Jack Lund <jackl@geekheads.net>", "macaroon-rs Contributors"]
description = "Fully functional implementation of macaroons in Rust"
documentation = "https://docs.rs/macaroon"
repository = "https://github.com/macaroon-rs/macaroon"
keywords = ["macaroon", "cookies", "authorization", "credentials"]
categories = ["authentication", "cryptography"]
license = "MIT"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.20"

[dev-dependencies]
env_logger = "0.10"
time = { version = "0.3", features = ["parsing"] }
